--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
  <script src="js/filters.js"></script>
  <script src="js/services.js"></script>
  
- <script src="libs/jquery/dist/jquery.min.js"></script>
+ <script src="libs/jquery/dist/jquery-3.1.1.min.js"></script>
  <script src="libs/bootstrap/dist/js/bootstrap.min.js">
  </script>
  </body>
